feat: cors test